Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/114_return_multireturn_func_not_allowed.xi
g():int,int

f():int,int
{
    return g()
}
//@PRACOWNIA
//@should_not_typecheck
